@@ -1828,7 +1828,7 @@ void speed_test() {
 
 int main(int argc, char *argv[]) {
 
-	new Calculator(false);
+	new Calculator(true);
 	CALCULATOR->loadGlobalDefinitions();
 	CALCULATOR->loadLocalDefinitions();
 	CALCULATOR->setPrecision(8);
@@ -1843,7 +1843,7 @@ int main(int argc, char *argv[]) {
 	po.show_ending_zeroes = false;
 	po.number_fraction_format = FRACTION_DECIMAL;
 	po.restrict_fraction_length = true;
-	//po.min_exp = 1;
+	po.min_exp = 1;
 	//po.max_decimals = 1;
 	//po.use_max_decimals = true;
 	CALCULATOR->setMessagePrintOptions(po);
@@ -1883,9 +1883,9 @@ int main(int argc, char *argv[]) {
 	mstruct.eval(evalops);
 	cout << mstruct << endl;*/
 	//speed_test();
-	test_integration();
+	/*test_integration();
 	cout << successes << ":" << imaginary << endl;
-	return 0;
+	return 0;*/
 	//test_intervals(true);
 
 	/*Number nr;
@@ -1961,7 +1961,7 @@ int main(int argc, char *argv[]) {
 		}
 	}
 	return 0;*/
-	/*for(size_t i = 0; i < 50000;) {
+	for(size_t i = 0; i < 50000;) {
 		str = rnd_expression(10, true, 6, 4, false, false, false, false, false, 5, false);
 		CALCULATOR->parse(&mp, str, evalops.parse_options);
 		cerr << str << endl;
@@ -1976,7 +1976,7 @@ int main(int argc, char *argv[]) {
 		}
 	}
 	cout << successes << ":" << imaginary << endl;
-	return 0;*/
+	return 0;
 
 	v = new KnownVariable("", "v", m_zero);
 
